<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Castor</string>
    <string name="cast_app_id">92F5361D</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_control">ControlActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="preference_ip_label">Http Server IP address</string>
    <string name="preference_ip_default">0.0.0.0</string>
    <string name="preference_http_server_key">server</string>
    <string name="preference_http_server_label">Start server</string>
    <string name="preference_start_server_boot_key">startOnBoot</string>
    <string name="preference_start_server_boot_label">Auto-start HTTP server</string>
    <string name="preference_start_server_boot_summary">automatically start the server when starting the app</string>
    <string name="preference_http_server_title">Http Server</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_http_server_summary">start the local http server</string>

</resources>
