<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_http_server_title">

        <SwitchPreference
            android:key="@string/preference_http_server_key"
            android:title="@string/preference_http_server_label"
            android:summary="@string/preference_http_server_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="@string/preference_start_server_boot_key"
            android:title="@string/preference_start_server_boot_label"
            android:summary="@string/preference_start_server_boot_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:title="@string/preference_ip_label"
            android:summary="@string/preference_ip_default"
            android:inputType="text"
            android:enabled="false" />
    </PreferenceCategory>
</PreferenceScreen>